--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,11 +2,7 @@ Metrics/LineLength:
   Max: 120
 
 Style/Documentation:
-  Exclude:
-    - 'spec/**/*'
-    - 'test/**/*'
-    - 'lib/jsonapi-serializers/attributes.rb'
-    - 'lib/jsonapi-serializers/serializer.rb'
+  Enabled: false
 
 # Offense count: 5
 Metrics/AbcSize:
